# fabric

./: '  .dockerignore  .gitignore  3  Cargo.toml  README.md  build.rs  dev.db-shm  dev.db-wal  dist-workspace.toml  docker-compose.yaml
.github/iac/: main.tf
.github/iac/.terraform/: terraform.tfstate
.github/image/: Dockerfile
.github/workflows/: build.yml  clippy.yml  deploy.yml  e2e-check.yml  e2e.yml  integration.yml  release-cli.yml  release.yml  test.yml
.sqlx/: query-006dacd453618e63d755431396f5e75dc7c4532ac3a8aa8c276dac375c46f6d4.json  query-09183103c0d4febfc5f971af4f30534e689a66fa3951bc69f24812de3c0ed447.json  query-0bab15fb43284f30749c198e059093efcc9014f9a6b933ab74c84fff3e14f41f.json  query-0c64288739469b438a5594c242ee61aa36c14b898867e837094cfd7d0c0ef2e1.json  query-127e6b12137e638062be0641dd2cecb72906706050357cef77290a623ca24037.json  query-27aa8092b3b15b44440a1623b1608b59efc063f2d827d3d19ee4890635719999.json  query-2d0f7987d21ec4e30aed41b7c3f112eeea7fa1bf96f2c15290173bf4af66d198.json  query-2ddf3f61026a7e5174cf63ffc37b6c02b7c4091081b9fcc2cd2304d316f5c75e.json  query-40eab1d64c11bb37930c3f21b7536f70fcc59a325e97395d00c3d360131b1181.json  query-42c3cd56e3abb0ce65821fbf4c6467711e4c8d640a21e14bddef0267376be46f.json  query-48b6d55a9261b69da4f0befb7b303d071827c1aeff1a0742e70ea2c9a159a6fb.json  query-4ce4f36e4b7fe7327efcae0adc60d8aeb3e903e1948c8dc1b434b1476774fc6c.json  query-4d25cb253b95aecdaaf50b04ec558d07eaeaef22a16a7966aa423efe690cc5a4.json  query-5009ccbe9cbf6b7be3460f01177734d727960fa0bd8f890262bd66e997e94160.json  query-54c55fa3609a5fef17ffa8508ee834ffc978aaab3ce92ad9b276de98c429efbd.json  query-5609eae9c06c0448cea195742be0e05574e5f6e678c36f72546cc97601ecfbaa.json  query-570c8e3635efb92c7479062e38b1efc72845517c37b58522197e5c542743d02a.json  query-616a0ca604be0e3a257568a086de8108d4f6eb53160ec6a56de7c7eb5d9d4637.json  query-6668aa0b6afbd8a254f0fd4ab159ba404adb74fa0a95d301ecb548cfdc0a39c5.json  query-6d90676a193fc3b21b921915300f13605b095acd388fb9b0dcb3995e571bf14c.json  query-6df3bbbabc374168c007ec1c8dea82126fc3e3b328d882989a1475b6b7c62c71.json  query-6e891e9977ee0cad549fa80a62ba38dde98acff657723c7eb71aa7dbb57eb6de.json  query-70236bfafd249f32547827b7a8245b54f063c330401d9ad3f2beca1607f8a316.json  query-733a82b5e3e3d90a716f98e32cf2a946e93b5897a8fc13c771c1ce508a8a42c4.json  query-7354a0db282d5f797f09a780d5a1f2466bc7927447b146e1987cc5141a25ff34.json  query-7718eaccdf3bd38e80db3bf56f1077a4e632eb946c948f46b111f27bd99794b5.json  query-7c35ea1710399717ce59cbd6586052615bc08b64b6f737a6fe32ed9748d5f4b4.json  query-7d18dd6749851ae3baa5c666279b66df4bda82a19e03d6852235598da2402c92.json  query-87dcb0c3d7fcf546c09d1908196db58274696265b4e07c0737640ad6c16f4d1f.json  query-9299297455cbad1f9fa86eaeebc313f3950172a65be47c379522eab33c43c3d0.json  query-933ade6d1ecef66bf6633f89c237a4f277800a52983f1931fe4960d5bdd53797.json  query-990c34c497e4871629ab80492ace282ce80f4412597eff1c8d8842b419c21d24.json  query-9973fd1b0b77890a2a667c728014c08f5e0b2846da495d724282b211104eb324.json  query-99ff24af67e73d9c53257843587ef63b04950d9b15dbc27943a0fed616d041d1.json  query-9a8cb6764b1166d31b7a24a348a4852cffaba306a490a0e67d5eab5fcbcd10c9.json  query-9cda46bde97a9fc36b78a067237ad083aaef795245df7c01fd8fc504ece4965c.json  query-9ffaba23f9806e445bbb3d3a14eedb6b9547d87ad29d3cfcdd0b8b103f4ccdab.json  query-a0ce3761d4bba12b7605ffa8633560c3c04d0b8af8f0abeeaa5d93fa90af62ce.json  query-a1676653e5f7f45bba340d71a491d23bc633ed0603dd34aa3ff2d38a00266c4a.json  query-a1814c7139edfe2d7458a346f149711c363de21aaadf4e205e216f2439bba08a.json  (+17 more)
adrs/: 001-organization-payments.md  001-payment-gateway-legacy-org.md  002-stripe.md  003-usage-billing.md  004-users.md
bootstap/daemon/: config.tf  main.tf  rbac.tf
bootstap/queue/: console.tf  console_config.yml  main.tf  sts.tf
bootstap/rpc/: config.tf  main.tf  service.tf
bootstap/services/: main.tf
bootstrap/daemon/: config.tf  daemon.toml.tftpl  deployment.tf  main.tf  monitor.tf  sts.tf
bootstrap/queue/: chart.tf  console.tf  create_topic_job.tf  main.tf  service.tf  setup.sh.tftpl  setup_job.tf  sts.tf  values.yml  values.yml.tftpl
bootstrap/rpc/: cert.tf  config.tf  crds.tf  deployment.tf  main.tf  monitor.tf  rpc.toml.tftpl  service.tf  sts.tf
bootstrap/rpc/crds/: baliusworker.hbs  baliusworker.json  blockfrostport.hbs  blockfrostport.json  cardanonodeport.hbs  cardanonodeport.json  dbsyncport.hbs  dbsyncport.json  frontends.json  kupoport.hbs  kupoport.json  marloweport.hbs  marloweport.json  mumakport.hbs  mumakport.json  ogmiosport.hbs  ogmiosport.json  scrollsport.hbs  scrollsport.json  submitapiport.hbs  submitapiport.json  trpport.hbs  trpport.json  utxorpcport.hbs  utxorpcport.json
bootstrap/services/: main.tf
data/: adjectives.json  nouns.json
diagrams/: account.md  legacy.md  sequence.md
docker/: dockerfile.backoffice  dockerfile.daemon  dockerfile.rpc
examples/: README.md  config.toml  docker-compose.yaml
examples/config/: cli.toml  daemon.toml  rpc.toml
proto/v1alpha/: project.proto
src/: lib.rs
src/domain/: auth.rs  error.rs  event.rs  events.rs  mod.rs  project.rs  resource.rs  utils.rs
src/domain/auth/: mod.rs
src/domain/daemon/: mod.rs  port.rs  (+1 more)
src/driven/: mod.rs
src/drivers/: mod.rs
test/: child.yaml  dependences.manifest.yaml  e2e  e2e-check  expect  fabric.manifest.yaml  kafka.manifest.yaml  main.yaml  manifest.yaml  setup
test/crd/: cardanonodeport.json
(+92 files in other folders)
